--- a/app/src/main/res/layout/type_message_area.xml
+++ b/app/src/main/res/layout/type_message_area.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/purple_700"
     android:gravity="bottom"
     android:orientation="horizontal">
 
@@ -10,9 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textColorHint="#CFD8DC"
+        android:hint="Write a message"
         android:textColor="#CFD8DC"
-        android:hint="Write a message" />
+        android:textColorHint="#CFD8DC" />
 
     <ImageView
         android:layout_width="match_parent"
