--- a/app/src/main/res/layout/userlist.xml
+++ b/app/src/main/res/layout/userlist.xml
@@ -21,7 +21,7 @@
             android:text="Medium Text"
             android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:padding="2dp"
             android:textColor="#4d4d4d" />
@@ -29,7 +29,7 @@
             android:id="@+id/subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:layout_marginLeft="10dp"/>
+            android:text="@string/textview"
+            android:layout_marginStart="10dp"/>
     </LinearLayout>
 </LinearLayout>
