--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -34,7 +34,7 @@
                     android:layout_weight="6"
                     android:background="@drawable/rounded_corner"
                     android:padding="16dp"
-                    android:text="Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example."
+                    android:text="@string/android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example"
                     android:textColor="#000" />
 
                 <ImageView
@@ -82,7 +82,8 @@
                     android:layout_marginEnd="-15dp"
                     android:layout_marginTop="6.5dp"
                     android:layout_weight="1"
-                    android:src="@drawable/arrow_bg2" />
+                    android:src="@drawable/arrow_bg2"
+                    android:contentDescription="@string/todo" />
 
                 <TextView
                     android:id="@+id/textView1"
@@ -123,7 +124,8 @@
                     android:layout_marginStart="-15dp"
                     android:layout_marginTop="6.5dp"
                     android:layout_weight="1"
-                    android:src="@drawable/arrow_bg1" />
+                    android:src="@drawable/arrow_bg1"
+                    android:contentDescription="@string/todo" />
 
                 <ImageView
                     android:id="@+id/imageView5"
@@ -131,7 +133,8 @@
                     android:layout_height="40dp"
                     android:layout_marginTop="0dp"
                     android:layout_weight="3"
-                    android:src="@drawable/user_pacific" />
+                    android:src="@drawable/user_pacific"
+                    android:contentDescription="@string/todo" />
 
             </LinearLayout>
 
@@ -149,7 +152,8 @@
                     android:layout_height="40dp"
                     android:layout_marginTop="0dp"
                     android:layout_weight="3"
-                    android:src="@drawable/user_pratikshya" />
+                    android:src="@drawable/user_pratikshya"
+                    android:contentDescription="@string/todo" />
 
                 <ImageView
                     android:id="@+id/imageView7"
@@ -158,7 +162,8 @@
                     android:layout_marginEnd="-15dp"
                     android:layout_marginTop="6.5dp"
                     android:layout_weight="1"
-                    android:src="@drawable/arrow_bg2" />
+                    android:src="@drawable/arrow_bg2"
+                    android:contentDescription="@string/todo" />
 
                 <TextView
                     android:id="@+id/textView5"
