--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -42,7 +42,7 @@
         android:background="#30ffffff"
         android:drawableStart="@drawable/ic_baseline_supervised_user_circle_24"
         android:drawablePadding="20dp"
-        android:hint="Enter Name"
+        android:hint="@string/enter_name"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="#ddd" />
@@ -91,7 +91,7 @@
         android:gravity="center">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/loginBtn"
+            android:id="@+id/registerBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
