--- a/app/src/main/res/layout/type_message_area.xml
+++ b/app/src/main/res/layout/type_message_area.xml
@@ -7,17 +7,20 @@
     android:orientation="horizontal">
 
     <EditText
+        android:id="@+id/typeMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:hint="Write a message"
+        android:hint="@string/write_a_message"
         android:textColor="#CFD8DC"
         android:textColorHint="#CFD8DC" />
 
     <ImageView
+        android:id="@+id/submitMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="5"
+        android:clickable="true"
         android:padding="4dp"
         android:src="@android:drawable/ic_menu_send" />
 </LinearLayout>
